themes/bigspring-light/assets/scss/_custom.scss
// This file is empty within the template
// You can use it to override CSS from within your project

$btn-white-space: wrap;
.leaflet-heatmap-layer {
  opacity: 0.3;
}

html{
  min-height: 100%;
}
header{
  padding: 3em 0;
  margin-left: -3em;  
}

.navbar-expand-lg{
  flex-flow: row wrap;
  overflow: wrap;

}
body {
  background-image: url(/images/bg.svg);
  background-repeat: repeat;
  background-position: 0 90%;
  background-size: cover;
  
  min-height:100vh;
}

footer{
  margin-bottom: -100vh;
}
.crosstalk-map {
  width: 100%;
  padding: 0;
  margin: 0;
}

label {
  display: inline;
}



.RHS {
  height: 100vh;
  margin: 0;
  padding: 0;
  top: 0;
}

.question {
  margin: 40px;
}



.text {
  margin-top: 2em;
}


#logo {
  width: 500px;
  display: flex;
  min-width: 100%;
}

#text {
  padding: 2em 0;
}

.navigation {
  padding: 2em 0;
}

#text-mobile {
  display: none;
}



.blog-item-wrapper{
  background-color: white;
  width:100%;
  padding: 1em 1em;
  border-radius: 1em;
  margin: 1em 1em;
}

.blog-cover-image{
  width: 100%;
  height: 200px;
  object-fit: cover;
  border-radius: 10px;
  margin-bottom: 1em;
}

.active, .collapsible:hover {
  background-color: #555;
}

.content {
  padding: 0 12px;
  display: none;
  overflow: hidden;
  background-color: #f1f1f1;
  border-radius: 3%;
}

.textRight{
  min-height: 50vh;
}
//-----------------------
// mobile features
@media (min-width: 585px) {
  
  //navigation 
  header{
    padding: 3em 0;
    margin-left: 0em;  
  }
  
  .navbar-expand-lg .navbar-nav .nav-link {
  padding: 15px;
  }
  
  .home{
    min-height: 100vh;
  }
  
  .blogHome{
  margin-top: 2em;
  padding: 2em 3em;
}
 
  #logo {
    min-width: 50%;
  }
  
  #container {
    min-height:100vh !important;
  }
  .textRight,
  .contact,
  #text-mobile {
    margin-top: 2em;
    padding: 0 3em;
  }
  #text {
    display: none;
  }

  #text-mobile {
    display: block;
  }

}
// desktop font-feature-settings
@media (min-width: 800px) {
  .map-section {
    position: -webkit-sticky; /* Safari */
    position: sticky !important;
    top: 0;

    width: 100%;
    height: 100vh;
  }
  
  .blogHome{
  margin-top: 15em;
  padding-right: 5em;
}
  .textRight,
  .contact {
    margin-top: 15em;
    padding-right: 20em;
  }
} ;

